tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_turbofish_turbofish_in_type_before_call_errors/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Expected type i32, found type bool
   ┌─ src/main.nr:13:33
   │
13 │         let _ = Foo::<i32>::new(true);
   │                                 ----
   │

Aborting due to 1 previous error
