tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_turbofish_turbofish_in_type_before_call_errors/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Expected type i32, found type bool
   ┌─ src/main.nr:13:33
   │
13 │         let _ = Foo::<i32>::new(true);
   │                                 ----
   │

Aborting due to 1 previous error
